# ha-danfoss-eco

./: .gitignore  LICENSE.md  README.md  hacs.json  pyproject.toml  pyrightconfig.json
.github/workflows/: validate.yml
custom_components/danfoss_eco/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/danfoss_eco/etrv/: client.py  crypto.py  properties.py
custom_components/danfoss_eco/translations/: en.json
